// Указываем, что используем 3-ю версию синтаксиса
syntax = "proto3";

// Определяем пакет, чтобы избежать конфликтов имен
package poslah.messages;

// Импортируем стандартный тип для временных меток
import "google/protobuf/timestamp.proto";

// Сервис, который будет реализовывать наш messages-service
service MessagesService {
  // Метод для получения минимальной информации о сообщении для проверки прав доступа
  rpc GetMessageAuthInfo(GetMessageAuthInfoRequest) returns (GetMessageAuthInfoResponse);
}

// Запрос для GetMessageAuthInfo
message GetMessageAuthInfoRequest {
  string chat_id = 1;
  int64 nn = 2;
}

// Ответ от GetMessageAuthInfo, содержащий только необходимые для авторизации поля
message GetMessageAuthInfoResponse {
  string author_id = 1;
  google.protobuf.Timestamp created_at = 2;
  google.protobuf.Timestamp deleted_at = 3;
}
